# ChatGateway

./: .gitignore  CMakeLists.txt  Dockerfile  docker-compose.yml  dockerfile  jwt.tokens  main.cpp  test.cpp  test_websocket
.devcontainer/: devcontainer.json
controllers/: ChatController.cpp  ChatController.h
dto/: ActiveUser.cpp  ActiveUser.h
dto/jwt/: JwtToken.h
jwt/config/: JwtConfigure.cpp  JwtConfigure.h
static/: index.html
util/logger/: AsynsLogger.cpp  AsynsLogger.h
